--- a/journal/201902.md
+++ b/journal/201902.md
@@ -154,7 +154,7 @@ Per the announcement, CoinFund partnered with [Placeholder](https://www.placehol
 February update from Ditto:
 
 * Media trained 5 Decred community members.
-* Secured media coverage: 15-minute [interview](https://blocktv.com/watch/2019-02-20/5c6d6a2be03e3-chain-breakers-promoting-constant-disruption-) between @jy-p and BlockTV, a feature [article](https://www.forbes.com/sites/leslieankney/2019/02/04/no-more-trading-or-listing-fees-decred-releases-new-dex-proposal/) for the DEX proposal in Forbes, a feature [article](https://breakermag.com/as-decred-turns-three-its-still-set-on-real-decentralization/) in honor of Decred's 3rd anniversary in Beaker Mag, an [article](https://www.theblockcrypto.com/2019/02/13/they-asked-us-for-3-million-an-inside-look-into-getting-listed-on-a-crypto-exchange/) on the Vertbase listing in The Block Crypto featuring quotes by @jz. The journalist, Frank Chaparro, said the story was very popular on Twitter and also internally at The Block
+* Secured media coverage: 15-minute [interview](https://blocktv.com/watch/2019-02-20/5c6d6a2be03e3-chain-breakers-promoting-constant-disruption-) between @jy-p and BlockTV, a feature [article](https://www.forbes.com/sites/leslieankney/2019/02/04/no-more-trading-or-listing-fees-decred-releases-new-dex-proposal/) for the DEX proposal in Forbes, a feature [article](https://breakermag.com/as-decred-turns-three-its-still-set-on-real-decentralization/) in honor of Decred's 3rd anniversary in Breaker Mag, an [article](https://www.theblockcrypto.com/2019/02/13/they-asked-us-for-3-million-an-inside-look-into-getting-listed-on-a-crypto-exchange/) on the Vertbase listing in The Block Crypto featuring quotes by @jz. The journalist, Frank Chaparro, said the story was very popular on Twitter and also internally at The Block
 * Facilitated 2 interviews with crypto media outlets.
 * Worked with the community to create a repository of media-friendly images that we can share with reporters to add visuals to stories about Decred.
 * Helped plan the logistics and content for the event hosted by Decred and OKCoin in San Francisco. Worked with Dustin and OKCoin to draft the Eventbrite copy, coordinate with OKCoin, develop the agenda for the event, and draft a press release.
@@ -188,41 +188,32 @@ As noted in Governance above, stakeholders approved a $200K budget for [2019 eve
 
 ## Media
 
-{community efforts: Decred Assembly, websites, etc}
-
-{ratings news}
-
 Selected articles:
 
+* Decred evaluation by TokenGazer (Chinese, [qq.com](https://mp.weixin.qq.com/s/7rMaTYXIhIpO37qiIvJX_A), _missed in Jan issue_) - Decred was rated 4.2
 * Which one is the best cryptocurrency next to bitcoin? answer by Pavel Svitek ([quora.com](https://www.quora.com/Which-one-is-the-best-cryptocurrency-next-to-bitcoin/answer/Pavel-Svitek)) - thanks to Pavel for presenting Decred to Quora
-* https://www.forbes.com/sites/leslieankney/2019/02/04/no-more-trading-or-listing-fees-decred-releases-new-dex-proposal/
-* https://breakermag.com/as-decred-turns-three-its-still-set-on-real-decentralization/ anniversary
-* https://cryptoslate.com/decred-founder-proposes-dex-binance-interview/
-* https://breakermag.com/what-the-longest-ever-bear-market-means-for-crypto/ commentary from @jy-p
-* https://www.theblockcrypto.com/2019/02/13/they-asked-us-for-3-million-an-inside-look-into-getting-listed-on-a-crypto-exchange/
-* https://www.placeholder.vc/blog/2019/2/19/cryptonetwork-governance-as-capital
-* https://www.investinblockchain.com/is-decred-dcr-building-decentralized-exchange/ by @richardred (also [in Chinese](https://0xzx.com/2019022708166553.html))
-* Decred evaluation by TokenGazer https://mp.weixin.qq.com/s/7rMaTYXIhIpO37qiIvJX_A , Decred was rated 4.2 _(missed in Jan issue)_
-
-Mentions {collapse}:
-
-* https://www.forbes.com/sites/samantharadocchia/2019/02/05/everything-about-the-digital-nomad-lifestyle-sounds-great-except-the-us-tax-system/
-* https://breakermag.com/bruce-schneier-is-right-about-blockchains-biggest-flaw-and-completely-wrong-about-its-longterm-significance/
-
-Above are most interesting articles, but more were published on the web. The [decred-media-tracker](https://github.com/RichardRed0x/decred-media-tracker) project is intended to track all articles.
-
-Translations:
-
-* {}
+* No More Trading Or Listing Fees? Decred Releases New DEX Proposal by Leslie Ankne ([forbes.com](https://www.forbes.com/sites/leslieankney/2019/02/04/no-more-trading-or-listing-fees-decred-releases-new-dex-proposal/))
+* How Long Will Crypto Winter Last? We Asked Three Experts by Julia Herbst ([breakermag.com](https://breakermag.com/what-the-longest-ever-bear-market-means-for-crypto/))
+* As Decred Turns Three, It's Still Set on Real Decentralization by David Z. Morris ([breakermag.com](https://breakermag.com/as-decred-turns-three-its-still-set-on-real-decentralization/)
+* Decred Founder Proposes Building DEX as Alternative to Binance (Interview) by Liam Kelly ([cryptoslate.com](https://cryptoslate.com/decred-founder-proposes-dex-binance-interview/))
+* "They asked us for $3 million": an inside look into getting listed on a crypto exchange by Frank Chaparro ([theblockcrypto.com](https://www.theblockcrypto.com/2019/02/13/they-asked-us-for-3-million-an-inside-look-into-getting-listed-on-a-crypto-exchange/))
+* Cryptonetwork Governance as Capital by Joel Monegro ([placeholder.vc](https://www.placeholder.vc/blog/2019/2/19/cryptonetwork-governance-as-capital))
+* Using Governance To Decide The Future: Is Decred (DCR) Going to Build a Decentralized Exchange? by @richardred ([investinblockchain.com](https://www.investinblockchain.com/is-decred-dcr-building-decentralized-exchange/), also [in Chinese](https://0xzx.com/2019022708166553.html))
+* Decred mentioned in [Forbes](https://www.forbes.com/sites/samantharadocchia/2019/02/05/everything-about-the-digital-nomad-lifestyle-sounds-great-except-the-us-tax-system/) and [Breaker Mag](https://breakermag.com/bruce-schneier-is-right-about-blockchains-biggest-flaw-and-completely-wrong-about-its-longterm-significance/) stories.
 
 Videos:
 
 * Decred AMA TruStory - Preethi Kasireddy chats with Isaac J and Matheus of Decred to learn more about the hybrid proof of work/proof of stake consensus mechanism and their governance model ([youtube](https://www.youtube.com/watch?v=OKdaa630YDk))
-* https://blocktv.com/watch/2019-02-20/5c6d6a2be03e3-chain-breakers-promoting-constant-disruption-
+* Cryptocurrency Security and Adaptability - talk by @jy-p at Campus Party Brazil ([youtube](https://www.youtube.com/watch?v=SMiHku6GGmI))
+* The Potential of Decentralization - interview with @jy-p for BlockTV ([blocktv.com](https://blocktv.com/watch/2019-02-20/5c6d6a2be03e3-chain-breakers-promoting-constant-disruption-))
 
 Audio:
 
-* {}
+* ITK Crypto #8 - Tom White and Crypto SI speak to @kozel about crypto governance ([youtube](https://www.youtube.com/watch?v=H-qZBsQY5BM))
+
+Translations:
+
+* Decred Journal - January 2019 [in Chinese](https://www.jianshu.com/p/097265621ef6) by @guang (also Dominic, Hugo and Jill), [in Spanish](https://medium.com/@decred_es/revista-decred-enero-2019-549e2b051f5a) by @elian. Thank you!
 
 ## Community
 
