--- a/journal/201902.md
+++ b/journal/201902.md
@@ -218,31 +218,34 @@ Translations:
 
 ## Community
 
-Community stats:
+Community stats as of Mar 1-2:
 
-* Politeia users: {} (+{})
-* Twitter followers: {} (+{})
-* Reddit subscribers: {} (+{})
-* Matrix users: {} (+{})
-* Slack users: {} (+{})
-* Telegram users: {} (+{})
-* YouTube subscribers: {} (+{})
-* Facebook followers: {} (+{}), likes: {} (+{})
-* LinkedIn followers: Decred page {} (+{}), Politeia page {} (+{})
-* GitHub dcrd stars: {} (+{}), forks: {} (+{})
+* Twitter followers: 39,797 (+19)
+* Reddit subscribers: 9,365 (+35)
+* Matrix users: 266 (+19)
+* Slack users: 6,581 (+52)
+* Discord users: 2,101, can post: 131
+* Telegram users: 4,272 (-231)
+* YouTube subscribers: 3,746 (-6)
+* Facebook followers: 3,141 (+9), likes: 2,896 (+5)
+* LinkedIn followers: Decred page 483 (+17), Politeia page 29 (+2)
+* GitHub dcrd stars: 474 (+6), forks: 1,237 (+16)
+
+Telegram communities: Chinese 866 (+53), Italian 160 (+28), Portuguese 642 (+100), Spanish 73 (+11).
+
+Chinese community was pretty active in Feb:
+
+* started a [#chinese](https://matrix.to/#/!nUWpVrwhlJFyLuMlGw:decred.org) room
+* Yin Guochao continued to write about Decred: one piece about [dcrtime](https://mp.weixin.qq.com/s/ks48Piu3s2zy4btZW0kBDQ) and another about [atomic swaps](https://mp.weixin.qq.com/s/Lgem_BqFBnLUsY7AzC5x_w)
+* Dominic did a [intro](https://twitter.com/wanbihou/status/1101122114118184961) to blockchain and Decred in a university to some students
+* article by Yin triggered another community member to [write more](https://teakki.com/p/5c774a9ab1029f607605bc76) about dcrtime and created a [web UI](http://www.ibitlin.com/dcrtool#/dcrtime) for timestamping files and raw text (UI for dcrtime is tracked in [this issue](https://github.com/xaur/decred-issues/issues/9)).
 
 Comm systems news:
 
-* [Riot.im](https://riot.im/app/#/room/#general:decred.org) was [upgraded](https://medium.com/@RiotChat/the-big-1-0-68fa7c6050be) to version 1.0 with a reworked UI
-* non-English rooms were renamed to their used language for consistency, unused rooms were removed. [#chinese](https://matrix.to/#/!nUWpVrwhlJFyLuMlGw:decred.org) is active and there is a Chinese [guide](https://blog.dcrclub.org/chapter_00/decred_matrixguide.html) by @morphymore how to join Matrix. Several rooms await bridging.
+* non-English chat rooms were renamed after language used in them for consistency, unused rooms were removed. [#chinese](https://matrix.to/#/!nUWpVrwhlJFyLuMlGw:decred.org), [#portuguese](https://matrix.to/#/!FBtUquQLhAvHeBIkac:decred.org), [#russian](https://matrix.to/#/!TQzfaYsKyxAqQDZQeX:decred.org) and [#spanish](https://matrix.to/#/!pkeRzinGCRtjIIhAAK:decred.org) are available in Matrix.
+* [Riot](https://riot.im/app/#/room/#general:decred.org) client was [upgraded](https://medium.com/@RiotChat/the-big-1-0-68fa7c6050be) to version 1.0 with a reworked UI.
 
-{selected discussed topics, as bullet list or one paragraph per topic}
-
-Another Reddit thread that received some discussion was [deleted](https://www.reddit.com/r/decred/comments/an4b6z/forbes_no_more_trading_or_listing_fees_decred/). Moderators have no power to forbid this destruction of community knowledge, except the workaround to [resubmit](https://www.reddit.com/r/decred/comments/ar29jd/forbes_no_more_trading_or_listing_fees_decred/) the deleted thread. Ideas for robust [Reddit replacement](https://github.com/xaur/decred-issues/issues/38) are welcome.
-
-Reddit: {interesting threads}
-
-Twitter: {interesting threads}
+Another Reddit thread was [deleted](https://www.reddit.com/r/decred/comments/an4b6z/forbes_no_more_trading_or_listing_fees_decred/) after receiving some discussion. Moderators have no power to forbid this destruction of community knowledge, except the workaround to [resubmit](https://www.reddit.com/r/decred/comments/ar29jd/forbes_no_more_trading_or_listing_fees_decred/) the deleted thread. Ideas for robust replacement for Reddit are collected in [this issue](https://github.com/xaur/decred-issues/issues/38).
 
 ## Markets
 
