Outreach: info from Dustorf

--- a/journal/201902.md
+++ b/journal/201902.md
@@ -151,6 +151,14 @@ Per the announcement, CoinFund partnered with [Placeholder](https://www.placehol
 
 ## Outreach
 
+In February, @Dustorf proposed and passed his plans for [marketing](https://proposals.decred.org/proposals/c84a76685e4437a15760033725044a15ad832f68f9d123eb837337060a09f86e) and [events](https://proposals.decred.org/proposals/d3e7f159b9680c059a3d4b398de2c8f6627108f28b7d61a3f10397acb4b5e509) for the remainder of 2019. This is an exciting development that further decentralizes Decred by shifting more direct over spending to the stakeholders. There was vigorous discussion and many good questions, but the proposals were approved by 83% and 89% of participating tickets.
+
+With an approved budget, work began in earnest on the scope of the proposals. Planning is underway on NYC Blockchain Week, which coincides with Consensus. More information should be announced within two weeks on these plans.
+
+The first podcast is underway and scheduled to deliver in March. It will feature Decred Jesus, who will provide a colorful overview discussion of Decred as seen from the ground. Work on the website is underway, with architecture, copy-writing and video scripting already begun.
+
+The Decred Assembly and the newsletter are tactics we hope to deliver by the end of this month.
+
 February update from Ditto:
 
 * Media trained 5 Decred community members.
